--- a/portainer/business/portainer-agent-stack.yaml
+++ b/portainer/business/portainer-agent-stack.yaml
@@ -1,11 +1,13 @@
 services:
   agent:
-    image: portainer/agent:2.18.3
+    image: portainer/agent:latest
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /var/lib/docker/volumes:/var/lib/docker/volumes
+      - /var/run/docker.sock:/var/run/docker.sock # Access existing docker on local host
+      - /var/lib/docker/volumes:/var/lib/docker/volumes # Access existing docker volumes on local host
     networks:
       - agent_network
+    ports:
+      - 9001:9001
     deploy:
       mode: global
       placement:
