prettier, added portainer env, node compose file

--- a/portainer/business/portainer-agent.yaml
+++ b/portainer/business/portainer-agent.yaml
@@ -9,6 +9,8 @@ services:
       - agent_network
     ports:
       - 9001:9001
+    environment:
+      AGENT_PORT: 9001
     deploy:
       mode: global
       placement:
