--- a/portainer/ce/portainer-agent.yaml
+++ b/portainer/ce/portainer-agent.yaml
@@ -9,6 +9,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock # Access existing docker environment on local host
       - /var/lib/docker/volumes:/var/lib/docker/volumes # Access existing docker volumes on local host
+    environment:
+      AGENT_PORT: 9001
 
 volumes:
   portainer_data:
